Add enable/disable mining functionality
